# qaiff-ops

./: MANIFEST.in  README.md  pyproject.toml  setup.py
qaiff_ops/: hooks.py  modules.txt
qaiff_ops/qaiff_ops/doctype/attendance_discrepancy/: attendance_discrepancy.json  attendance_discrepancy.py
qaiff_ops/qaiff_ops/doctype/daily_attendance/: daily_attendance.json  daily_attendance.py
qaiff_ops/qaiff_ops/doctype/factory/: factory.json  factory.py
qaiff_ops/qaiff_ops/doctype/ff_attendance/: ff_attendance.json  ff_attendance.py
qaiff_ops/qaiff_ops/doctype/ff_project/: ff_project.json  ff_project.py
qaiff_ops/qaiff_ops/doctype/ff_roster_entry/: ff_roster_entry.json  ff_roster_entry.py
qaiff_ops/qaiff_ops/doctype/operator/: operator.json  operator.py
qaiff_ops/qaiff_ops/doctype/operator_profile/: operator_profile.json  operator_profile.py
qaiff_ops/qaiff_ops/doctype/payment_batch/: payment_batch.json  payment_batch.py
qaiff_ops/qaiff_ops/doctype/payment_record/: payment_record.json  payment_record.py
qaiff_ops/qaiff_ops/doctype/project_roster_entry/: project_roster_entry.json  project_roster_entry.py
qaiff_ops/qaiff_ops/doctype/qaiff_project/: qaiff_project.json  qaiff_project.py
