[project]
name = "qaiff_ops"
authors = [{name = "QAIFF+5", email = "ops@qaiff.in"}]
description = "QAIFF Ops - Factory Operations ERP"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
